[gd_scene load_steps=6 format=3 uid="uid://4vn4gtp88kyl"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_arbwt"]
[ext_resource type="Texture2D" uid="uid://cidae215m7scu" path="res://Assets/Images/interface.png" id="2_m8csp"]
[ext_resource type="FontFile" uid="uid://bt0l5la2lm82o" path="res://Assets/Fonts/Minecraft.ttf" id="6_g0quc"]

[sub_resource type="LabelSettings" id="LabelSettings_1g58k"]
font = ExtResource("6_g0quc")

[sub_resource type="Theme" id="Theme_ytf48"]
default_font = ExtResource("6_g0quc")
default_font_size = 16
MarginContainer/constants/margin_bottom = 64
MarginContainer/constants/margin_left = 32
MarginContainer/constants/margin_right = 32
MarginContainer/constants/margin_top = 64
VBoxContainer/constants/separation = 16

[node name="Main" type="Node2D"]
script = ExtResource("1_arbwt")
mouse_arrow = "res://Assets/Images/cursor_default.png"
mouse_pointing = "res://Assets/Images/cursor_point_hand.png"
clicker_idle = "res://Assets/Images/idle.png"
clicker_pressed = "res://Assets/Images/click_pressed.png"
clicker_hover = "res://Assets/Images/click_hover.png"

[node name="Interface" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="Interface"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m8csp")

[node name="ButtonClicker" type="TextureButton" parent="Interface"]
offset_left = 19.0
offset_top = 84.0
offset_right = 256.0
offset_bottom = 262.0
mouse_default_cursor_shape = 2
ignore_texture_size = true
stretch_mode = 0

[node name="NumeroClickers" type="Label" parent="Interface/ButtonClicker"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.426
anchor_top = 0.0959101
anchor_right = 0.426
anchor_bottom = 0.0959101
offset_left = -38.962
offset_top = -23.072
offset_right = 39.038
offset_bottom = -0.0720005
text = "x Clickers"
label_settings = SubResource("LabelSettings_1g58k")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SpawnParticles" type="Marker2D" parent="Interface"]
unique_name_in_owner = true
position = Vector2(122, 309)

[node name="Buttons" type="Control" parent="Interface"]
layout_mode = 3
anchor_left = 0.405
anchor_top = 0.5
anchor_right = 0.405
anchor_bottom = 0.5
offset_left = -0.200012
offset_top = -180.0
offset_right = 380.8
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Interface/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ytf48")

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/Buttons/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Interface/Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="MelhorarClickButton" type="Button" parent="Interface/Buttons/MarginContainer/HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Melhorar Click"
alignment = 0

[node name="AutoClickerButton" type="Button" parent="Interface/Buttons/MarginContainer/HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto Clicker"
alignment = 0

[node name="Prices" type="VBoxContainer" parent="Interface/Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="MelhorarClickPrice" type="Label" parent="Interface/Buttons/MarginContainer/HBoxContainer/Prices"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "R$ 2,00"

[node name="AutoClickerPrice" type="Label" parent="Interface/Buttons/MarginContainer/HBoxContainer/Prices"]
unique_name_in_owner = true
layout_mode = 2
text = "R$ 2,00"

[node name="AutoClicker" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Interface/ButtonClicker" to="." method="clicar"]
[connection signal="pressed" from="Interface/Buttons/MarginContainer/HBoxContainer/Buttons/MelhorarClickButton" to="." method="melhorar_click"]
[connection signal="pressed" from="Interface/Buttons/MarginContainer/HBoxContainer/Buttons/AutoClickerButton" to="." method="comprar_autoclicker"]
[connection signal="timeout" from="AutoClicker" to="." method="auto_clicked"]
